# e2spec

./: .gitignore  Cargo.toml  README.md  note.txt
api_server/: run.py  server.sh  specdoctor.py
e2spec-vue/: README.md  package-lock.json  package.json
e2spec-vue/src/: App.vue
e2spec-vue/src/assets/: base.css  main.css
e2spec-vue/src/components/: Details.vue  Main.vue  Ment.vue
e2spec-vue/src/router/: index.ts
e2spec-vue/src/views/: Main.vue
e2specrs_test/: Cargo.toml
e2specrs_test/src/: main.rs
src/: dummy.rs  index.html  main.js  main.rs  src.7z
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: AboutView-Bk28TgOX.js  index-Jrd-PPpy.css  index-RGXmVQgC.js
src/original/: main.js
