[package]
name = "e2spec"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32.0"
openssl = { version = "0.10", features = ["vendored"] }

#reqwest = "0.12.8"
#tokio = { version = "1.40.0", features = ["full"] }
#serde = { version = "1.0", features = ["derive"] }
